Added tools section, removed unused css/js

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                             development clean architecture and agile methodologies, experience with development and
                             architecture of fault tolerant real time systems, microservices and big data solutions.</p>
 
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </section><!--//section-->
+                    </div>
+                </div>
+            </section>
 
 
             <section class="experience section">
@@ -74,9 +74,9 @@
                     <h2 class="heading">Work Experience</h2>
                     <div class="content">
                         <div class="item">
-                            <h3 class="title">Backend Developer - <span class="place"><a
+                            <h3 class="title">Full Stack Developer - <span class="place"><a
                                     href="http://instal.com/">Instal</a></span> <span
-                                    class="year">(2016 - Present)</span></h3>
+                                    class="year">(2016 - 2018)</span></h3>
 
                             <p>In Instal I've worked as an android developer, my work was focused mainly on the
                                 proprietary <b>sdk development</b></p>
@@ -87,7 +87,12 @@
                                 high performance real data processing, I've also contributed to the microservices-based
                                 architecture by developing
                                 scalable and fault tolerant services using <b>python</b> with <b>tornado</b> and <b>golang</b>
-                                with <b>gingonic.</b>
+                                with <b>gingonic</b>.
+                            </p>
+
+                            <p>
+                                As frontend developer I've developed dashboards for our services using <b>angular 6</b>
+                                and <b>reactjs</b>.
                             </p>
 
 
@@ -96,7 +101,7 @@
                                 for production container orchestration and <b>Sensu</b> for monitoring and alerting
                                 system in the <b>GCE</b> environment.</p>
 
-                        </div><!--//item-->
+                        </div>
                         <div class="item">
                             <h3 class="title">Android Course Teacher - <span class="place"><a
                                     href="http://www.gobettivolta.gov.it/">IIS Gobetti Volta</a></span>
@@ -105,11 +110,11 @@
                             <p>Teacher in a free android developing course for high school students hosted by IIS
                                 Gobetti Volta</p>
 
-                        </div><!--//item-->
+                        </div>
 
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </section><!--//section-->
+                    </div>
+                </div>
+            </section>
 
             <section class="projects section">
                 <div class="section-inner">
@@ -128,7 +133,7 @@
                                     class="fa fa-external-link"></i>View on GitHub</a></p>
                             <p><a class="more-link" href="https://docker.garu.io/" target="_blank"><i
                                     class="fa fa-external-link"></i>Docker Visualizer</a></p>
-                        </div><!--//item-->
+                        </div>
 
                         <div class="item">
                             <h3 class="title"><a href="#">Warden</a>
@@ -139,7 +144,7 @@
                             <p><a class="more-link"
                                   href="https://github.com/GaruGaru/Warden"
                                   target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
-                        </div><!--//item-->
+                        </div>
 
 
                         <div class="item">
@@ -151,7 +156,7 @@
                             <p><a class="more-link"
                                   href="https://github.com/GaruGaru/Tao"
                                   target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
-                        </div><!--//item-->
+                        </div>
 
                         <div class="item">
                             <h3 class="title"><a href="#">Confy</a>
@@ -162,7 +167,7 @@
                             <p><a class="more-link"
                                   href="https://github.com/GaruGaru/Confy2"
                                   target="_blank"><i class="fa fa-external-link"></i>View on GitHub</a></p>
-                        </div><!--//item-->
+                        </div>
 
 
                         <div class="item">
@@ -176,17 +181,17 @@
                             <p><a class="more-link"
                                   href="https://github.com/GaruGaru/PioveDomaniAdImpruneta"
                                   target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
-                        </div><!--//item-->
+                        </div>
 
                         <a class="btn btn-cta-secondary" href="https://github.com/GaruGaru/">More on GitHub <i
                                 class="fa fa-chevron-right"></i></a>
 
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </section><!--//section-->
+                    </div>
+                </div>
+            </section>
 
 
-        </div><!--//primary-->
+        </div>
         <div class="secondary col-md-4 col-sm-12 col-xs-12">
             <aside class="info aside section">
                 <div class="section-inner">
@@ -197,9 +202,9 @@
                             <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                     href="mailto: garuglieritommaso@gmail.com">garuglieritommaso@gmail.com</a></li>
                         </ul>
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </aside><!--//aside-->
+                    </div>
+                </div>
+            </aside>
 
             <aside class="skills aside section">
                 <div class="section-inner">
@@ -209,43 +214,52 @@
                         <div class="skillset">
 
                             <div class="item">
-                                <h3 class="level-title">Java<span class="level-label">Expert</span></h3>
+                                <h3 class="level-title">Java<span class="level-label">Experienced</span></h3>
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="96%">
                                     </div>
-                                </div><!--//level-bar-->
-                            </div><!--//item-->
+                                </div>
+                            </div>
 
                             <div class="item">
-                                <h3 class="level-title">Kotlin<span class="level-label">Proficient</span></h3>
+                                <h3 class="level-title">Kotlin<span class="level-label">Expert</span></h3>
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="85%">
                                     </div>
-                                </div><!--//level-bar-->
-                            </div><!--//item-->
+                                </div>
+                            </div>
 
                             <div class="item">
                                 <h3 class="level-title">Python<span class="level-label">Proficient</span></h3>
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="70%">
                                     </div>
-                                </div><!--//level-bar-->
-                            </div><!--//item-->
+                                </div>
+                            </div>
 
 
                             <div class="item">
-                                <h3 class="level-title">GoLang<span class="level-label">Beginner</span></h3>
+                                <h3 class="level-title">GoLang<span class="level-label">Proficient</span></h3>
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="60%">
                                     </div>
-                                </div><!--//level-bar-->
-                            </div><!--//item-->
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                <h3 class="level-title">Typescript<span class="level-label">Beginner</span></h3>
+                                <div class="level-bar">
+                                    <div class="level-bar-inner" data-level="40%">
+                                    </div>
+                                </div>
+                            </div>
+
 
                             <!--    <p><a class="more-link" href="#"><i class="fa fa-external-link"></i> More on Coderwall</a></p>  -->
                         </div>
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </aside><!--//section-->
+                    </div>
+                </div>
+            </aside>
 
 
             <aside class="education aside section">
@@ -256,10 +270,37 @@
                             <h3 class="title"><i class="fa fa-graduation-cap"></i>Computer Science
                             </h3>
                             <h4 class="university"> IIS Gobetti Volta <span class="year">(2010-2015)</span></h4>
-                        </div><!--//item-->
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </aside><!--//section-->
+                        </div>
+                    </div>
+                </div>
+            </aside>
+
+            <aside class="education aside section">
+                <div class="section-inner">
+                    <h2 class="heading">Tools</h2>
+                    <div class="content">
+                        <div class="item">
+
+                            <span class="label label-lang-go">kubernetes</span>
+                            <span class="label label-lang-go">docker</span>
+                            <span class="label label-lang-go">docker swarm</span>
+
+                            <span class="label label-lang-go">postgres</span>
+                            <span class="label label-lang-go">mysql</span>
+                            <span class="label label-lang-go">hbase</span>
+                            <span class="label label-lang-go">redis</span>
+
+                            <span class="label label-lang-go">rabbitmq</span>
+                            <span class="label label-lang-go">google pubsub</span>
+
+                            <span class="label label-lang-go">google dataflow</span>
+                            <span class="label label-lang-go">apache storm</span>
+
+                        </div>
+                    </div>
+                </div>
+            </aside>
+
 
             <aside class="languages aside section">
                 <div class="section-inner">
@@ -271,17 +312,17 @@
                                 <span class="level">Native Speaker <br class="visible-xs"/><i class="fa fa-star"></i> <i
                                         class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
                                         class="fa fa-star"></i> </span>
-                            </li><!--//item-->
+                            </li>
                             <li class="item">
                                 <span class="title"><strong>English:</strong></span>
                                 <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i
                                         class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
                                         class="fa fa-star-half"></i></span>
-                            </li><!--//item-->
+                            </li>
                         </ul>
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </aside><!--//section-->
+                    </div>
+                </div>
+            </aside>
 
 
             <aside class="list music aside section">
@@ -298,9 +339,9 @@
                             <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=mzf7OR6-C8o">If
                                 These Trees Could Talk</a></li>
                         </ul>
-                    </div><!--//content-->
-                </div><!--//section-inner-->
-            </aside><!--//section-->
+                    </div>
+                </div>
+            </aside>
 
         </div><!--//secondary-->
     </div><!--//row-->
@@ -318,15 +359,12 @@
 <!-- Javascript -->
 <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
 <!-- github calendar plugin -->
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/3.0.2/es6-promise.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fetch/0.10.1/fetch.min.js"></script>
-<script type="text/javascript" src="assets/plugins/github-calendar/dist/github-calendar.min.js"></script>
 <!-- github activity plugin -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-<script type="text/javascript" src="assets/plugins/github-activity/src/github-activity.js"></script>
 <!-- custom js -->
 <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
