Styled tools section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         </div><!--//profile-->
         <a class="btn btn-cta-primary pull-right" href="mailto: garuglieritommaso@gmail.com" target="_blank"><i
                 class="fa fa-paper-plane"></i> Contact Me</a>
+
+        <a style="margin-right: 2px" class="btn btn-cta-primary pull-right" href="https://www.visualcv.com/tommaso-garuglieri" target="_blank"><i
+                class="fa fa-book"></i>CV</a>
+
     </div><!--//container-->
 </header><!--//header-->
 
@@ -279,24 +283,31 @@
                 <div class="section-inner">
                     <h2 class="heading">Tools</h2>
                     <div class="content">
-                        <div class="item">
 
-                            <span class="label label-lang-go">kubernetes</span>
-                            <span class="label label-lang-go">docker</span>
-                            <span class="label label-lang-go">docker swarm</span>
+                        <span class="label tools-docker">kubernetes</span>
+                        <span class="label tools-docker">docker</span>
+                        <span class="label tools-docker">docker swarm</span>
 
-                            <span class="label label-lang-go">postgres</span>
-                            <span class="label label-lang-go">mysql</span>
-                            <span class="label label-lang-go">hbase</span>
-                            <span class="label label-lang-go">redis</span>
+                        <span class="label tools-database">postgres</span>
+                        <span class="label tools-database">mysql</span>
+                        <span class="label tools-database">hbase</span>
+                        <span class="label tools-database">redis</span>
 
-                            <span class="label label-lang-go">rabbitmq</span>
-                            <span class="label label-lang-go">google pubsub</span>
+                        <span class="label tools-bigdata">rabbitmq</span>
+                        <span class="label tools-bigdata">google pubsub</span>
 
-                            <span class="label label-lang-go">google dataflow</span>
-                            <span class="label label-lang-go">apache storm</span>
+                        <span class="label tools-bigdata">google dataflow</span>
+                        <span class="label tools-bigdata">apache storm</span>
+                        <span class="label tools-bigdata">apache impala</span>
 
-                        </div>
+                        <span class="label tools-bigdata">hdfs</span>
+                        <span class="label tools-bigdata">glusterfs</span>
+
+                        <span class="label tools-devops">chef</span>
+                        <span class="label tools-devops">jenkins</span>
+                        <span class="label tools-devops">terraform</span>
+
+
                     </div>
                 </div>
             </aside>
