--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
                         <span class="label tools-database">mysql</span>
                         <span class="label tools-database">hbase</span>
                         <span class="label tools-database">redis</span>
+                        <span class="label tools-database">influxdb</span>
 
                         <span class="label tools-bigdata">rabbitmq</span>
                         <span class="label tools-bigdata">google pubsub</span>
