Added more personal projects

--- a/index.html
+++ b/index.html
@@ -125,6 +125,23 @@
                     <h2 class="heading">Personal Projects</h2>
                     <div class="content">
 
+                        <div class="item">
+                            <h3 class="title"><a href="#">Flaw</a>
+                                <span class="label label-theme">Open Source</span>
+                            </h3>
+                            <p class="summary">CLI for injecting failures on api calls for local chaos engineering</p>
+                            <p><a class="more-link" href="https://github.com/GaruGaru/flaw" target="_blank"><i
+                                    class="fa fa-external-link"></i>View on GitHub</a></p> 
+                        </div>
+
+                        <div class="item">
+                            <h3 class="title"><a href="#">Ciak</a>
+                                <span class="label label-theme">Open Source</span>
+                            </h3>
+                            <p class="summary">Lightweight media server written in Go</p>
+                            <p><a class="more-link" href="https://github.com/GaruGaru/ciak" target="_blank"><i
+                                    class="fa fa-external-link"></i>View on GitHub</a></p> 
+                        </div>
 
                         <div class="item">
                             <h3 class="title"><a href="#">Portfolio</a>
