Added Travel Appeal work expirience

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
                 <div class="section-inner">
                     <h2 class="heading">Work Experience</h2>
                     <div class="content">
+
+                         <div class="item">
+                            <h3 class="title">Full Stack Developer - <span class="place"><a
+                                    href="https://www.travelappeal.com">Travel Appeal</a></span> <span
+                                    class="year">(2018 - present)</span></h3>
+
+                            <p>During my experience as fullstack developer in Travel Appeal I've worked on the design and implementation of the <b>microservice architecture</b> and scalable data ingestion system using technologies such as <b>spring boot</b> for the backend and angular+typescript for the frontend deployed on <b>AWS</b> and <b>Azure</b> (AKS)</p>
+ 
+
+                        </div>
+
                         <div class="item">
                             <h3 class="title">Full Stack Developer - <span class="place"><a
                                     href="http://instal.com/">Instal</a></span> <span
